test/fails/bad_functions/auto2.lgl
auto f(auto x) {
    return x;
}

void main() {
    print f(1);
}